// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback/> should render 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
  will-change: transform;
}

.c9:link,
.c9:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c9:not([disabled]):hover,
.c9:not([disabled]):active,
.c9:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c9[disabled] {
  background-color: #e4e8ef;
  border-color: #e4e8ef;
  color: #9298af;
  box-shadow: none;
  cursor: not-allowed;
}

.c7 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c10 + .c10 {
  margin-left: 4rem;
}

@media (max-width:600px) {
  .c2 {
    padding: 0 1rem;
  }
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.4rem;
  }
}

@media print {
  .c9 {
    display: none;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c6 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:1180px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c5 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c8 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c10 + .c10 {
    margin-left: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <strong
          class="c5 c6"
        >
          <div
            class="c7"
          />
          Avez-vous trouvé la réponse à votre question ?
        </strong>
        <p
          class="c8"
        >
          <button
            class="c9 c10 "
          >
            Non
          </button>
          <button
            class="c9 c10 "
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer no 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12 {
  width: 2.6rem;
  height: 1.4rem;
  margin: 0 0.4rem 0 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c9:hover .c11 {
  -webkit-transform: translateX(4px);
  -ms-transform: translateX(4px);
  transform: translateX(4px);
}

.c7 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c8 {
  -webkit-flex: 1 0 100%;
  -ms-flex: 1 0 100%;
  flex: 1 0 100%;
}

@media (max-width:600px) {
  .c2 {
    padding: 0 1rem;
  }
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {

}

@media print {

}

@media (max-width:600px) {

}

@media (max-width:600px) {
  .c10 {
    font-size: 1.4rem;
  }
}

@media print {
  .c10 {
    display: none;
  }
}

@media (max-width:600px) {
  .c6 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:1180px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c5 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {

}

@media (max-width:1180px) {

}

@media (max-width:1180px) {
  .c8 {
    margin-top: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <strong
          class="c5 c6"
        >
          <div
            class="c7"
          />
          Avez-vous trouvé la réponse à votre question ?
        </strong>
        <p
          class="c8"
        >
          Merci pour votre réponse. Pour obtenir une réponse à votre question de droit du travail, nous vous invitons à joindre les
           
          <button
            class="c9 c10"
          >
            services du ministère du Travail en région
            <svg
              class="c11 c12"
              fill="none"
              viewBox="0 0 28 15"
            >
              <path
                d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
                fill="currentColor"
              />
            </svg>
          </button>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer yes 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c5 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c8 {
  -webkit-flex: 1 0 100%;
  -ms-flex: 1 0 100%;
  flex: 1 0 100%;
}

@media (max-width:600px) {
  .c2 {
    padding: 0 1rem;
  }
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 2.4rem 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {

}

@media print {

}

@media (max-width:600px) {

}

@media (max-width:600px) {
  .c6 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:1180px) {
  .c4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c5 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {

}

@media (max-width:1180px) {

}

@media (max-width:1180px) {
  .c8 {
    margin-top: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <strong
          class="c5 c6"
        >
          <div
            class="c7"
          />
          Avez-vous trouvé la réponse à votre question ?
        </strong>
        <p
          class="c8"
        >
          Merci pour votre réponse.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should send piwik event when click no 1`] = `"[]"`;

exports[`<Feedback/> should send piwik event when click yes 1`] = `"[]"`;
